--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,21 +2,34 @@
 
 - name: Install PHP
   yum:
-    name="{{ php_package_prefix }}{{ item }}"
+    name="{{ php_prefix }}-{{ item }}"
     state="{{ php_package_state }}"
   with_items: "{{ php_base_packages }}"
 
 - name: Install PECL Mods
   yum:
-    name="{{ php_package_prefix }}{{ item }}"
+    name="{{ php_prefix }}-{{ item }}"
     state="{{ php_package_state }}"
   with_items: "{{ php_pecl_modules }}"
 
+- name: Install PHP.ini
+  template:
+    src="{{ php_prefix }}-php.ini"
+    dest="/opt/nexcess/{{ php_prefix }}/root/etc"
+    owner="root"
+    group="root"
+    mode"0644"
+
 - name: Install Browscap.INI
   template:
-    src=browscap.ini.j2
-    dest=/etc/browscap.ini
-    owner=root
-    group=root
-    mode=0644
+    src="browscap.ini.j2"
+    dest="/etc/browscap.ini"
+    owner="root"
+    group="root"
+    mode"0644"
   when: php_install_browscap_ini
+
+
+- name: Setup FPM
+  include: "fpm.yml"
+  when: php_fpm_install
