--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -11,23 +11,14 @@
     name="/opt/nexcess/{{ php_prefix }}/root/etc/php-fpm.d/www.conf"
     state="absent"
 
-- name: Install Opcache Config
+- name: Install FPM Pools
   template:
-    src="php.d/10-opcache.ini.j2"
-    dest="/opt/nexcess/{{ php_prefix }}/root/etc"
-    owner="root"
-    group="root"
-    mode"0644"
-
-- name: Install Default PHP-FPM Pools
-  template:
-    src="php-fpm.d/{{ item }}"
+    src="pool-template.conf.j2"
     dest="/opt/nexcess/{{ php_prefix }}/root/etc/php-fpm.d"
     owner="root"
     group="root"
     mode"0644"
-  with_items:
-    - default.conf.j2
+  with_items: php_fpm_pools
 
 - name: Start + Start-on-boot
   service:
