--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -17,7 +17,7 @@
     dest="/opt/nexcess/{{ php_prefix }}/root/etc/php-fpm.d"
     owner="root"
     group="root"
-    mode"0644"
+    mode="0644"
   with_items: php_fpm_pools
 
 - name: Start + Start-on-boot
