--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
     dest="/opt/nexcess/{{ php_prefix }}/root/etc"
     owner="root"
     group="root"
-    mode"0644"
+    mode="0644"
 
 - name: Install Opcache.ini
   template:
@@ -26,7 +26,7 @@
     dest="/opt/nexcess/{{ php_prefix }}/root/etc/php.d/10-opcache.ini"
     owner="root"
     group="root"
-    mode"0644"
+    mode="0644"
 
 - name: Install Browscap.INI
   template:
@@ -34,7 +34,7 @@
     dest="/etc/browscap.ini"
     owner="root"
     group="root"
-    mode"0644"
+    mode="0644"
   when: php_install_browscap_ini
 
 - name: Setup FPM
