--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Install PHP
   yum:
-    name="{{ php_prefix }}-{{ item }}-{{ php_version }}"
+    name="{{ php_prefix }}-{{ item }}"
     state="{{ php_package_state }}"
   with_items: "{{ php_base_packages }}"
 
