--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -12,7 +12,7 @@
     state="absent"
 
 - name: debug
-  debug: var=php_fpm_pools
+  debug: var=hostvars[inventory_hostname]
 
 - name: Install FPM Pools
   template:
