--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,8 @@ php_pecl_modules:
   - "php-pecl-libsodium"
 php_package_state: "present"
 php_install_browscap_ini: true
+php_symlink_scl_bins: true
+php_root: "/opt/nexcess/{{ php_prefix }}/root"
 
 # PHP-FPM Vars
 php_fpm_enabled: false
