--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,19 +43,16 @@
     recurse="no"
   register: found
 
-#- name: Symlink SCL Binaries
-#  file:
-#    src="{{ item.path }}"
-#    dest="/usr/bin/"
-#    owner="root"
-#    group="root"
-#    mode="0755"
-#    state="link"
-#  with_items: found.files
-#  when: php_symlink_scl_bins
-
 - name: Symlink SCL Binaries
-  debug: var=found
+  file:
+    src="{{ item.path }}"
+    dest="/usr/bin/{{ item.path | basename }}"
+    owner="root"
+    group="root"
+    mode="0755"
+    state="link"
+  with_items: found.files
+  when: php_symlink_scl_bins
 
 - name: Setup FPM
   include: "fpm.yml"
