Making fpm not start during role creation b/c user that fpm is running as may not exist

--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -20,8 +20,7 @@
     mode="0644"
   with_items: "{{ php_fpm_pools }}"
 
-- name: Start + Start-on-boot
+- name: Start-on-boot
   service:
     name="{{ php_prefix }}-php-fpm"
     enabled="yes"
-    state="started"
