--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,7 @@ php_package_state: "present"
 php_install_browscap_ini: true
 php_symlink_scl_bins: true
 php_root: "/opt/nexcess/{{ php_prefix }}/root"
+php_ini_config: []
 
 # PHP-FPM Vars
 php_fpm_enabled: false
