Add support for managing opcache.ini settings

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,3 +34,21 @@ php_fpm_packages:
   - "php-fpm"
 php_fpm_pools: []
 php_fpm_port: 9000
+
+# OpCache settings (useful for PHP >=5.5).
+php_opcache_zend_extension: "opcache.so"
+php_opcache_enable: "1"
+php_opcache_enable_cli: "0"
+php_opcache_memory_consumption: "96"
+php_opcache_interned_strings_buffer: "16"
+php_opcache_max_accelerated_files: "4096"
+php_opcache_max_wasted_percentage: "5"
+php_opcache_validate_timestamps: "1"
+php_opcache_revalidate_path: "0"
+php_opcache_revalidate_freq: "2"
+php_opcache_max_file_size: "0"
+php_opcache_blacklist_filename: ""
+
+__php_opcache_conf_filename: 10-opcache.ini
+__php_extension_conf_paths:
+  - "{{ php_root }}/etc/php.d"
