--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,15 @@
 ---
 
+- name: Define php_opcache_conf_filename.
+  set_fact:
+    php_opcache_conf_filename: "{{ __php_opcache_conf_filename }}"
+  when: php_opcache_conf_filename is not defined
+
+- name: Define php_extension_conf_paths.
+  set_fact:
+    php_extension_conf_paths: "{{ __php_extension_conf_paths }}"
+  when: php_extension_conf_paths is not defined
+
 - name: Install PHP
   yum:
     name="{{ php_prefix }}-{{ item }}"
@@ -57,6 +67,12 @@
     create="no"
   with_items: "{{ php_ini_config }}"
 
+- name: Setup Opcache
+  include: "opcache.yml"
+  static: no
+
 - name: Setup FPM
   include: "fpm.yml"
   when: php_fpm_enabled
+  static: no
+
