I was wrong about static: no being the source of the fpm.yml problem

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,7 +70,8 @@
 - name: Setup FPM
   include: "fpm.yml"
   when: php_fpm_enabled
+  static: no
 
 - name: Setup Opcache
   include: "opcache.yml"
-
+  static: no
