--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,12 +2,12 @@
 
 - name: Define php_opcache_conf_filename.
   set_fact:
-    php_opcache_conf_filename: "{{ __php_opcache_conf_filename }}"
+    php_opcache_conf_filename="{{ __php_opcache_conf_filename }}"
   when: php_opcache_conf_filename is not defined
 
 - name: Define php_extension_conf_paths.
   set_fact:
-    php_extension_conf_paths: "{{ __php_extension_conf_paths }}"
+    php_extension_conf_paths="{{ __php_extension_conf_paths }}"
   when: php_extension_conf_paths is not defined
 
 - name: Install PHP
