--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -59,6 +59,5 @@ php_opcache_revalidate_freq: 2
 php_opcache_max_file_size: 0
 php_opcache_blacklist_filename: ""
 
-__php_opcache_conf_filename: "10-opcache.ini"
-__php_extension_conf_paths:
-  - "{{ php_config }}/php.d"
+php_opcache_conf_filename: "10-opcache.ini"
+php_extension_conf_paths: "{{ php_config }}/php.d"
