--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,7 +35,7 @@ php_package_state: "present"
 php_install_browscap_ini: true
 php_symlink_scl_bins: true
 php_root: "/opt/remi/{{ php_prefix }}/root"
-php_config: "/etc/opt/remi/{{ php_prefix }}"
+php_config_root: "/etc/opt/remi/{{ php_prefix }}"
 php_ini_config: []
 php_single_version: true
 
@@ -62,4 +62,4 @@ php_opcache_blacklist_filename: ""
 
 php_opcache_conf_filename: "10-opcache.ini"
 php_extension_conf_paths:
-  - "{{ php_config }}/php.d"
+  - "{{ php_config_root }}/php.d"
