add additional php packages based on support feedback

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,17 +14,25 @@ php_base_packages:
   - "php-pear"
   - "php-soap"
   - "php-intl"
+  - "php-tidy"
+  - "php-imap"
   - "php-devel"
   - "php-xmlrpc"
   - "php-mcrypt"
   - "php-common"
   - "php-bcmath"
+  - "php-pspell"
   - "php-process"
   - "php-mysqlnd"
   - "php-opcache"
+  - "php-enchant"
   - "php-mbstring"
+  - "php-ioncube-loader"
 php_pecl_modules:
   - "php-pecl-zip"
+  - "php-pecl-ssh2"
+  - "php-pecl-geoip"
+  - "php-pecl-oauth"
   - "php-pecl-redis"
   - "php-pecl-imagick"
   - "php-pecl-igbinary"
