--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -70,6 +70,7 @@ php_opcache_revalidate_path: 0
 php_opcache_revalidate_freq: 2
 php_opcache_max_file_size: 0
 php_opcache_blacklist_filename: ""
+php_opcache_huge_code_pages: 1
 
 php_opcache_conf_filename: "10-opcache.ini"
 php_extension_conf_paths:
